Added Dockerfile and kubernites yaml

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vuejs-axios",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Noel da Costa",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0"
   }
