--- a/fe-deployment.yaml
+++ b/fe-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gcloudtest-fe
-        image: gcr.io/deployment-test-239915/gcloud-test-fe
+        image: gcr.io/deployment-test-239915/gcloud-test-fe:v4
         imagePullPolicy: Always
         resources:
           requests:
